# people-counter

./: CMakeLists.txt  README.md  extra.cpp  extra.h  project.cpp  video.avi
