PROJECT(opencv)
CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

FIND_PACKAGE(OpenCV REQUIRED)
LINK_LIBRARIES(${OpenCV_LIBS})
INCLUDE_DIRECTORIES(AFTER ${CMAKE_CURRENT_BINARY_DIR} ${OpenCV_INCLUDE_DIR})
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -Wall")

ADD_EXECUTABLE(project project.cpp extra.cpp)

FILE(COPY video.avi DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
FILE(COPY video2.avi DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

